bad/2020-07-06/15-40/76.1/build.err
run.c: In function ‘wed’:
run.c:17:252: error: lvalue required as left operand of assignment
         if (chaine[i]  = 66 || chaine[i]  = 67 || chaine[i]  = 68 || chaine[i]  = 70 || chaine[i]  = 71 || chaine[i]  = 72 || chaine[i]  = 90 || chaine[i]  = 74 || chaine[i]  = 75 || chaine[i]  = 76 || chaine[i]  = 77 || chaine[i]  = 78 || chaine[i]  = 80  chaine[i]  = 81  chaine[i]  = 82 || chaine[i]  = 83 || chaine[i]  = 84 || chaine[i]  = 86 || chaine[i]  = 87 || chaine[i]  = 88)
                                                                                                                                                                                                                                                            ^
run.c:17:258: error: expected ‘)’ before ‘chaine’
         if (chaine[i]  = 66 || chaine[i]  = 67 || chaine[i]  = 68 || chaine[i]  = 70 || chaine[i]  = 71 || chaine[i]  = 72 || chaine[i]  = 90 || chaine[i]  = 74 || chaine[i]  = 75 || chaine[i]  = 76 || chaine[i]  = 77 || chaine[i]  = 78 || chaine[i]  = 80  chaine[i]  = 81  chaine[i]  = 82 || chaine[i]  = 83 || chaine[i]  = 84 || chaine[i]  = 86 || chaine[i]  = 87 || chaine[i]  = 88)
                                                                                                                                                                                                                                                                  ^~~~~~